@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003-2004 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: server.scm,v 1.70 2006/05/23 14:31:15 cut-sea Exp $
+;; $Id: server.scm,v 1.71 2006/05/23 16:30:57 cut-sea Exp $
 
 ;; This module integrates various kahua.* components, and provides
 ;; application servers a common utility to communicate kahua-server
@@ -370,15 +370,16 @@
 ;; it's used as like as parameter.
 ;;
 (define-macro (define-session-object name init-value)
-  `(define ,name
-     (let1 get-session
-	 (lambda ()
-	   (kahua-context-ref "session-state"))
-       (getter-with-setter
-	(lambda () (cond ((ref (get-session) ',name) => identity)
-			 (else (set! (ref (get-session) ',name) ,init-value)
-			       (ref (get-session) ',name))))
-	(lambda (val) (set! (ref (get-session) ',name) val))))))
+  (let1 get-session (gensym)
+    `(define ,name
+       (let1 ,get-session
+	   (lambda ()
+	     (kahua-context-ref "session-state"))
+	 (getter-with-setter
+	  (lambda () (cond ((ref (,get-session) ',name) => identity)
+			   (else (set! (ref (,get-session) ',name) ,init-value)
+				 (ref (,get-session) ',name))))
+	  (lambda (val) (set! (ref (,get-session) ',name) val)))))))
 			 
 
 ;; KAHUA-CURRENT-ENTRY-NAME
